# distributed-downloader

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  RUST_DESIGN.md  build.rs  test_download.bat  test_download.sh
configs/: client.yml  manager.yml  server.yml  test_client.yml
protobuf/: messages.proto
src/: client.rs  lib.rs  main.rs  manager.rs  server.rs
src/config/: client.rs  manager.rs  mod.rs  server.rs
src/config/examples/: client.yml  manager.yml  server.yml
src/downloader/: http.rs  mod.rs
src/error/: mod.rs  types.rs
src/network/: client.rs  manager.rs  mod.rs  protobuf_helper.rs  server.rs
src/proto/: distributed_downloader.rs  mod.rs
src/utils/: distributor.rs  file.rs  mod.rs
tests/: integration_tests.rs
tests/unit_tests/: config_tests.rs  downloader_tests.rs  network_tests.rs  utils_tests.rs
