[package]
name = "distributed-downloader"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["stream"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# 命令行参数解析
clap = { version = "4.0", features = ["derive"] }

# 日志记录
tracing = "0.1"
tracing-subscriber = "0.3"

# 进度条
indicatif = "0.17"

# UUID生成
uuid = { version = "1.0", features = ["v4"] }

# 文件路径处理
dirs = "5.0"

# 异步流处理
futures-util = "0.3"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
# 测试工具
tokio-test = "0.4"
assert_fs = "1.0"
tempfile = "3.0"

[[bin]]
name = "manager"
path = "src/bin/manager.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"