[package]
name = "ddr"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# gRPC框架
tonic = "0.11"

# HTTP客户端
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }

# 序列化/反序列化


# Protobuf支持
prost = "0.12"
prost-types = "0.12"
tokio-util = { version = "0.7", features = ["codec"] }

# 命令行参数解析
clap = { version = "4.0", features = ["derive"] }

# 日志记录
tracing = "0.1"
tracing-subscriber = "0.3"

# 进度条
indicatif = "0.17"

# UUID生成
uuid = { version = "1.0", features = ["v4"] }

# 文件路径处理
dirs = "5.0"

# 异步流处理
futures-util = "0.3"

# 错误处理
anyhow = "1.0"

# 高效字节数组
bytes = "1"

# 并发HashMap
dashmap = "5.5"

[build-dependencies]
chrono = "0.4"
tonic-build = "0.11"

[dev-dependencies]
# 测试工具
tokio-test = "0.4"
assert_fs = "1.0"
tempfile = "3.0"
